William updates something

--- a/src/mmt/Nav.css
+++ b/src/mmt/Nav.css
@@ -1,14 +1,23 @@
-nav {
-	font-size: 1.1em;
-}
-.dropdown > a {
-	color: 	#FFFFFF;
+/* main font color on nav */
+nav a {
+	color: #b0b0b0 !important;
 }
 .dropdown-menu {
 	width: 7.5em;
-	color: #676767;
 	min-width: 7.5em !important;
 }
-.navbar a[href]:hover {
-	font-weight: bold;
+/*  */
+nav .dropdown-menu {
+	background: #343a40;
+}
+/* main font color when mouse hovers on nav */
+.navbar-nav > .nav-link:hover {
+	color: #fff !important;
+}
+.dropdown > a:hover {
+	color: #fff !important;
+}
+.dropdown-menu > a:hover {
+	color: #fff !important;
+	background: #343a40;
 }
