--- a/src/mmt/Home.css
+++ b/src/mmt/Home.css
@@ -1,3 +1,12 @@
 .carousel-item > img{
     height:20em;
 }
+
+form > .form-row input {
+    height: 3.5em;
+}
+button {
+    height: 3.5em !important;
+    border: 1px solid #ff6700 !important;
+    background-color: #ff6700 !important;
+}
